@@ -37,6 +37,9 @@ changes in sbcl-0.9.16 relative to sbcl-0.9.15:
     argument for shadowing by local functions.
   * bug fix: compiler-macros expansion was inhibited by local INLINE 
     declarations.
+  * bug fix: inline expansions of known functions were subject to
+    step-instrumentation in high debug policies, leading to problems
+    with type-inference.
 
 changes in sbcl-0.9.15 relative to sbcl-0.9.14:
   * added support for the ucs-2 external format.  (contributed by Ivan
